# opositaria-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LOOP.md  RALPH.md  README.md  alembic.ini  conftest.py  docker-compose.yaml  pyproject.toml  ralph-once.sh  ralph.sh
.claude/agents/: architecture-reviewer.md  code-reviewer.md  project-validator.md  tests-reviewer.md
.claude/skills/action-refactor/: SKILL.md
.claude/skills/action-tdd/: SKILL.md
.claude/skills/guidelines/architecture-hexagonal/: SKILL.md
.claude/skills/guidelines/design-principles/: SKILL.md
.claude/skills/guidelines/git-strategy/: SKILL.md
.claude/skills/guidelines/testing-standards/: SKILL.md
.claude/skills/task-architecture-review/: SKILL.md
.claude/skills/task-code-review/: SKILL.md
.claude/skills/task-testing-review/: SKILL.md
.claude/skills/task-validate/: SKILL.md
.opencode/agents/: spec-apply.md  spec-archive.md  spec-explore.md  spec-review.md
openspec/: config.yaml
openspec/specs/document-processing/: spec.md
openspec/specs/semantic-search/: spec.md
openspec/specs/study-documents/: spec.md
openspec/specs/study-spaces/: spec.md
src/: main.py
src/document_processing/application/: ports.py  use_cases.py
src/document_processing/domain/: entities.py  repositories.py
src/document_processing/infrastructure/: __init__.py  embedding_generator.py  pdf_extractor.py  rabbitmq_publisher.py  repositories.py  text_chunker.py  worker.py  worker_entrypoint.py
src/semantic_search/application/: dtos.py  ports.py  use_cases.py
src/semantic_search/domain/: value_objects.py
src/semantic_search/infrastructure/: controllers.py
src/shared/infrastructure/: configuration_error.py  database.py  factory.py  logging_configuration.py  rabbitmq.py  settings.py
src/study_documents/application/: dtos.py  ports.py  use_cases.py
src/study_documents/domain/: entities.py  repositories.py
src/study_documents/infrastructure/: controllers.py  document_storage.py  models.py  repositories.py
src/study_spaces/application/: dtos.py  use_cases.py
src/study_spaces/domain/: entities.py  repositories.py
src/study_spaces/infrastructure/: controllers.py  models.py  repositories.py
src/users/application/: dtos.py  ports.py  use_cases.py
src/users/domain/: entities.py  repositories.py  value_objects.py
src/users/infrastructure/: controllers.py  models.py  repositories.py  security.py
(+74 files in other folders)
