[project]
name = "opositaria-backend"
version = "0.1.0"
description = "opositaria-backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.18.5",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pypdf>=5.0.0",
    "aio-pika>=9.5.0",
    "numpy>=2.5.1",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    "pre-commit>=4.0.0",
]
ml = [
    "sentence-transformers>=3.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]
python_files = ["*_test.py", "test_*.py"]
markers = [
    "unit: Unit tests (fast, no external deps)",
    "integration: Integration tests (real DB)",
    "e2e: End-to-end tests (full HTTP stack)",
]
addopts = "-v --tb=short"
